More styles and templates

--- a/about.html
+++ b/about.html
@@ -41,12 +41,7 @@
     <div class="noop visual-focus-on" style="position:relative">
       <div id="SCROLL_TO_TOP" tabindex="-1" aria-label="top of page" role="region" style="height:0"></div>
       <div id="FONTS_CONTAINER"></div>
-      <div id="SITE_BACKGROUND" style="top: 50px; min-height: calc(100vh - 50px); height: 2015px; width: 980px;" class="siteBackground">
-        <div id="SITE_BACKGROUND_previous_noPrev" data-position="absolute" data-align="" data-fitting="" class="siteBackgroundprevious" style="width: 100%; height: 100%;">
-          <div id="SITE_BACKGROUNDpreviousImage" class="siteBackgroundpreviousImage"></div>
-          <div id="SITE_BACKGROUNDpreviousVideo" class="siteBackgroundpreviousVideo"></div>
-          <div id="SITE_BACKGROUND_previousOverlay_noPrev" class="siteBackgroundpreviousOverlay"></div>
-        </div>
+      <div id="SITE_BACKGROUND" style="top: 50px; min-height: calc(100vh - 50px); height: 515px; width: 980px;" class="siteBackground">
         <div id="SITE_BACKGROUND_current_do3fh_k8nvbq23_bg" style="top: 0px; background-color: rgb(255, 255, 255); position: absolute; width: 100%; height: 100%;" data-position="absolute" data-align="top" data-fitting="fill"
           class="siteBackgroundcurrent">
           <div id="SITE_BACKGROUND_currentImage_do3fh_k8nvbq23_bg" style="position: absolute; top: 0px; height: 100%; width: 100%;" data-type="bgimage" data-height="100%" class="siteBackgroundcurrentImage"
@@ -72,85 +67,55 @@
           </header>
 
           <main tabindex="-1" data-is-mobile="false" data-is-mesh="true" data-site-width="980" style="left:0;margin-left:0;width:100%;min-width:980px;top:0;bottom:;right:;position:" class="pc1" data-state="" id="PAGES_CONTAINER">
-            <div style="left:0" id="PAGES_CONTAINERscreenWidthBackground" class="pc1screenWidthBackground"></div>
+            <div style="left:0" id="PAGES_CONTAINERscreenWidthBackground" class="pc1screenWidthBackground">
+            </div>
             <div style="position:relative" id="PAGES_CONTAINERcenteredContent" class="pc1centeredContent">
-              <div style="display:none" id="PAGES_CONTAINERbg" class="pc1bg"></div>
+              <div style="display:none" id="PAGES_CONTAINERbg" class="pc1bg">
+              </div>
               <div style="position:relative" id="PAGES_CONTAINERinlineContent" class="pc1inlineContent">
                 <div style="width:100%">
                   <div data-ismobile="false" data-is-mesh-layout="true" style="height:100%;left:0;position:relative;top:;bottom:;right:" class="style-k8nvdzgb" id="do3fh">
-                    <div style="margin-left:calc((100% - 980px) / 2);width:980px" id="do3fhbg" class="style-k8nvdzgbbg"></div>
+                    <div style="margin-left:calc((100% - 980px) / 2);width:980px" id="do3fhbg" class="style-k8nvdzgbbg">
+                    </div>
                     <div class="style-k8nvdzgbinlineContent" id="do3fhinlineContent">
                       <div id="do3fhinlineContent-gridWrapper" data-mesh-internal="true">
-                        <div id="do3fhinlineContent-gridContainer" data-mesh-internal="true">
-                          <section style="left:0;width:100%;min-width:980px;height:auto;top:;bottom:;right:;position:;margin-left:0" data-responsive="true" data-is-screen-width="true" data-col-margin="0" data-row-margin="0" class="strc1"
-                            id="comp-ividcu8f">
 
-                            <div style="position:relative;width:calc(100% - 0px);min-width:980px" id="comp-ividcu8finlineContent" class="strc1inlineContent">
-                              <div style="position:relative;width:100%;left:0;flex:980;margin-left:0;min-width:980px;top:0;margin-top:0;margin-bottom:0;height:;display:flex;bottom:;right:" data-content-width="980" data-is-mesh="true" class="strc1"
-                                id="comp-ividcu8k">
-                                <div style="position: absolute; top: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: auto; left: 0px; right: 0px; bottom: 0px;" data-page-id="do3fh" data-enable-video="true" data-bg-effect-name=""
-                                  data-media-type="" data-use-clip-path="" data-needs-clipping="" data-wix-video-layout="true" class="strc1balata" id="comp-ividcu8kbalata">
-                                  <div style="position:absolute;width:100%;height:100%;top:0;background-color:rgba(0, 0, 0, 1)" class="bgColor" id="comp-ividcu8kbalatabgcolor">
-                                  </div>
-                                </div>
-                                <div style="width:100%;position:relative;top:0;bottom:0" class="strc1inlineContent" id="comp-ividcu8kinlineContent">
-                                  <div id="comp-ividcu8kinlineContent-gridWrapper" data-mesh-internal="true">
-                                    <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
-                                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                                        <!-- <h2 class="font_2" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Daniel Russo</span></h2>
 
-                                        <h5 class="font_5" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Cinematographer, Filmmaker, Storyteller&nbsp;</span></h5> -->
-                                      </div>
-                                      <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
-                                        <h6 class="font_6" style="line-height:1.5em;">
-                                          and a paragraph explaining why you chose this dataset.
-                                          For example, is the topic a passion of yours? Does it have personal significance? Were you inspired by something? This is different from the overall narrative, which often describes what you are trying to
-                                          learn from this dataset instead of why you chose this dataset in the first place.
-                                        </h6>
-                                      </div>
-                                      <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="40" style="height: 40px; min-height: 30px; width: 217px;"
-                                        class="style-ivko0jau" data-state="desktop shouldUseFlex left"><a href="data.html" target="_self" id="comp-ividcu8slink" class="style-ivko0jaulink"><span style="margin-left:0" id="comp-ividcu8slabel"
-                                            class="style-ivko0jaulabel">Read More About Data → </span></a></div>
-                                    </div>
-                                  </div>
-                                </div>
+                        <div style="width:100%;position:relative;top:0;bottom:0" class="strc1inlineContent" id="comp-ividcu8kinlineContent">
+                          <div id="comp-ividcu8kinlineContent-gridWrapper" data-mesh-internal="true">
+                            <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
+
+                              <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                                  <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Why This Dataset</span></h2>
                               </div>
-                          </section>
-                          <section style="left:0;width:100%;min-width:980px;height:auto;top:;bottom:;right:;position:;margin-left:0" data-responsive="true" data-is-screen-width="true" data-col-margin="0" data-row-margin="0" class="strc1"
-                            id="comp-ividcu3u">
-                            <div style="position: absolute; top: 0px; width: calc(100% - 0px); height: 100%; overflow: hidden; pointer-events: auto; min-width: 980px; left: 0px; right: 0px; bottom: 0px;" data-page-id="do3fh" data-enable-video="true"
-                              data-bg-effect-name="" data-media-type="" data-use-clip-path="" data-needs-clipping="" data-wix-video-layout="true" class="strc1balata" id="comp-ividcu3ubalata">
-                              <div style="position:absolute;width:100%;height:100%;top:0;background-color:rgba(255, 255, 255, 1)" class="bgColor" id="comp-ividcu3ubalatabgcolor">
-                                <div style="width:100%;height:100%;position:absolute;top:0;background-image:;opacity:1" id="comp-ividcu3ubalatabgcoloroverlay" class="bgColoroverlay"></div>
+                              <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                                <h6 class="font_6" style="line-height:1.5em;">
+                                  and a paragraph explaining why you chose this dataset.
+                                  For example, is the topic a passion of yours? Does it have personal significance? Were you inspired by something? This is different from the overall narrative, which often describes what you are trying to
+                                  learn from this dataset instead of why you chose this dataset in the first place.
+                                </h6>
                               </div>
+                              <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="40" style="height: 40px; min-height: 30px; width: 217px;" class="style-ivko0jau"
+                                data-state="desktop shouldUseFlex left">
+                                <a href="data.html" target="_self" id="comp-ividcu8slink" class="style-ivko0jaulink">
+                                  <span style="margin-left:0" id="comp-ividcu8slabel" class="font_6">
+                                    About Data →
+                                  </span>
+                                </a>
+                              </div>
+
                             </div>
-                            <div style="position:relative;width:calc(100% - 0px);min-width:980px" id="comp-ividcu3uinlineContent" class="strc1inlineContent">
-                              <div style="position:relative;width:100%;left:0;flex:332;margin-left:0;min-width:332px;top:0;margin-top:0;margin-bottom:0;height:;display:flex;bottom:;right:" data-content-width="332" data-is-mesh="true" class="strc1"
-                                id="comp-ividcu4c">
-                                <div style="position: absolute; top: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: auto; left: 0px; right: 0px; bottom: 0px;" data-page-id="do3fh" data-enable-video="true" data-bg-effect-name=""
-                                  data-media-type="" data-use-clip-path="" data-needs-clipping="" data-wix-video-layout="true" class="strc1balata" id="comp-ividcu4cbalata">
-                                  <div style="position:absolute;width:100%;height:100%;top:0;background-color:transparent" class="bgColor" id="comp-ividcu4cbalatabgcolor">
-                                    <div style="width:100%;height:100%;position:absolute;top:0;background-image:;opacity:1" id="comp-ividcu4cbalatabgcoloroverlay" class="bgColoroverlay"></div>
-                                  </div>
-                                </div>
-                                <div style="width:100%;position:relative;top:0;bottom:0" class="strc1inlineContent" id="comp-ividcu4cinlineContent">
-                                  <style id="comp-ividcu4c-mesh-styles">
-
-                                  </style>
-
-                                  <div id="comp-ividcu4cinlineContent-gridWrapper" data-mesh-internal="true">
-                                    <div id="comp-ividcu4cinlineContent-gridContainer" data-mesh-internal="true">
-
-                                      <div data-packed="true" style="width: 199px; pointer-events: none; opacity: 0;" class="txtNew" id="comp-ividcu5n">
-                                        <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
-                                                data-anchor="dataItem-ividcu601">I'm a paragraph. Click here to add your own text and edit me.</a></span></span></p>
-                                      </div>
-                                    </div>
-                                  </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </main>
 
           <!-- black footer -->
-
           <footer style="bottom:auto;left:0;margin-left:0;width:100%;min-width:980px;top:;right:;position:" class="style-k8nvc4vq_footer style-k8nvc4vq" tabindex="-1" data-site-width="980" data-fixedposition="false" data-isrunninginmobile="false"
             data-is-absolute-layout="false" data-state=" " id="SITE_FOOTER">
             <div style="left:0;width:100%" id="SITE_FOOTERscreenWidthBackground" class="style-k8nvc4vqscreenWidthBackground">
