--- a/index.html
+++ b/index.html
@@ -73,8 +73,29 @@
                     <div class="style-k8nvdzgbinlineContent" id="do3fhinlineContent">
                       <div id="do3fhinlineContent-gridWrapper" data-mesh-internal="true">
                         <div id="do3fhinlineContent-gridContainer" data-mesh-internal="true">
-                          <section style="left:0;width:100%;min-width:980px;height:auto;top:;bottom:;right:;position:;margin-left:0" data-responsive="true" data-is-screen-width="true" data-col-margin="0" data-row-margin="0" class="strc1"
-                            id="comp-ividcu8f">
+
+
+                          <!-- THE WHITE BLOCK  -->
+                          <div style="width:100%;position:relative;top:0;bottom:0" class="strc1inlineContent" id="comp-ividcu8kinlineContent">
+                            <div id="comp-ividcu8kinlineContent-gridWrapper" data-mesh-internal="true">
+                              <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
+                                <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                                  <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Data Table</span></h2>
+                                </div>
+                                <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                                  <h6 class="font_6" style="line-height:1.5em;">
+                                    This should be a separate page that describes the original dataset. It should include the dataset attribution (including link to the source and date accessed), the license for the dataset, the size of the
+                                    dataset (including number of rows, columns, file size, or estimate where appropriate), and the content of the dataset listing all relevant columns and their descriptions.
+                                  </h6>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+
+
+
+                            <!-- THE BLACK PARAM -->
 
                             <div style="position:relative;width:calc(100% - 0px);min-width:980px" id="comp-ividcu8finlineContent" class="strc1inlineContent">
                               <div style="position:relative;width:100%;left:0;flex:980;margin-left:0;min-width:980px;top:0;margin-top:0;margin-bottom:0;height:;display:flex;bottom:;right:" data-content-width="980" data-is-mesh="true" class="strc1"
@@ -254,7 +275,7 @@
                                                   href="visual.html" target="_self" data-anchor="dataItem-ividcu621">Visualizations</a></span></span></span></p>
                                       </div>
                                       <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
-                                        <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
+                                        <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="visual.html" target="_self"
                                                 data-anchor="dataItem-ividcu621">Page that includes d3 visualizations.</a></span></span></p>
                                       </div>
                                     </div>
@@ -272,8 +293,6 @@
                                   <div id="comp-ividcu4cinlineContent-gridContainer" data-mesh-internal="true">
 
                                     <div data-packed="true" style="width: 199px; pointer-events: none; opacity: 0;" class="txtNew" id="comp-ividcu5n">
-                                      <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
-                                              data-anchor="dataItem-ividcu601">I'm a paragraphbla. Click here to add your own text and edit me.</a></span></span></p>
                                     </div>
                                   </div>
                                 </div>
