Added more writeups

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                               <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                 <h6 class="font_6" style="line-height:1.5em;">
                                   The datasets topic is cinematography. I am passionate about movies, always has been a cinematography geek. I started making my own short movies years ago and participated in some competitions.
-                                  Since childhood, I was very into the whole industry, on one of the competitions I won the first place as a director of the short movie and got good recommendations fro0m a famous screenwriter.
+                                  Since childhood, I was very into the whole industry, on one of the competitions I won the first place as a director of the short movie and got good recommendations from a famous screenwriter.
                                   I am very curios in CS in cinematography as well.
                                 </h6>
                               </div>
