--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                                 <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                   <h6 class="font_6" style="line-height:1.5em;">
                                     Visualizations will include interesting views on cinematography datasets.
-                                    The overall narrative, goal, story, or theme includes what you hoped to learn by visualizing this dataset.
-                                    Each visualization might have its own individual goal, but it must be relevant to the overall narrative stated here.
+                                    The goal is to show the movies data from different perspectives. </br>
+                                    ...
                                   </h6>
                                 </div>
                               </div>
