--- a/ratings.html
+++ b/ratings.html
@@ -147,6 +147,7 @@
                     <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                       <h6 class="font_6" style="line-height:1.5em;">
                         The overall idea for the ratings prototypes and visualizations is to find dependecies between movie genres and these parameters: gross, budget, imdb ratings.
+                        This page show different prototypes to see the overall idea.
                       </h6>
                     </div>
 
