Added writeups and map visualization

--- a/index.html
+++ b/index.html
@@ -110,11 +110,15 @@
                                     <h2 class="font_2" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Narrative</span></h2>
                                   </div>
                                   <div data-packed="true" class="txtNew" id="comp-ivku2gb91" style="width: 571px; pointer-events: none;">
-                                    <h6 class="font_6" style="line-height:1.5em;"><span style="font-weight:bold;"><span style="letter-spacing:0.05em;">
+                                    <h6 class="font_6" style="line-height:1.5em;">
+                                      <span style="font-weight:bold;">
+                                        <span style="letter-spacing:0.05em;">
                                           Visualizations will include interesting views on cinematography datasets.
                                           The goal is to show the movies data from different perspectives. </br>
-                                          ...
-                                        </span></span></h6>
+                                          Visualizations will be divided on two topics. One visualization is focused on locations of movies filmed in San Francisco. Second is focused on movie ratings analysis.
+                                        </span>
+                                      </span>
+                                    </h6>
                                   </div>
                                 </div>
                               </div>
@@ -144,7 +148,9 @@
                                 </div>
                                 <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                   <h6 class="font_12" style="line-height:1.5em;">
-                                    Website style: <a href="https://www.wix.com/account/sites">Wix</a>
+                                    Website style: <u><a href="https://www.wix.com/account/sites">Wix</a></u> </br>
+                                    Prototype Applications: <u><a href="https://www.tableau.com/">Tableau</a></u>, <u><a href="https://app.rawgraphs.io/">Raw Graphs</a></u> </br>
+                                    Coming soon...
                                   </h6>
                                 </div>
                               </div>
