Added writeups and color changes

--- a/locations.html
+++ b/locations.html
@@ -121,7 +121,7 @@
                     <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                       <h6 class="font_6" style="line-height:1.5em;">
                         I find it interesting to see the map of all locations where the movies were filmed.</br>
-                        The data wrangling includes a lot of manual work. Each table row was processed to get the full address from location entered by user. After getting full address data was entered to a special <u><a href="https://www.gpsvisualizer.com/geocoder/">application</a></u> to get latitude and longitude for map visualization.
+                        The data wrangling includes a lot of manual work. Each table row was processed to get the full address from location entered by user. After getting the full address of the location, the data was entered to a special <u><a href="https://www.gpsvisualizer.com/geocoder/">application</a></u> to get latitude and longitude coordiantes for a map visualization.
                       </h6>
                     </div>
 
