--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
                               </div>
                               <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                 <h6 class="font_6" style="line-height:1.5em;">
-                                  The datasets topic is cinematography. I am passionate about movies, always has been a cinematography geek. I started making my own short movies years ago and participated in some competitions.
+                                  The datasets topic is cinematography. I am passionate about movies, always have been a cinematography geek. I started making my own short movies years ago and participated in some competitions.
                                   Since childhood, I was very into the whole industry, on one of the competitions I won the first place as a director of the short movie and got good recommendations from a famous screenwriter.
-                                  I am very curios in CS in cinematography as well.
+                                  I am very curious about the connection between CS and cinematography as well.
                                 </h6>
                               </div>
                               <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="20" style="height: 10px; min-height: 10px; width: 217px;" class="style-ivko0jau"
