--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
   <link href="css/font.css" rel="stylesheet">
   <link href="css/notusedyet/style2.css" rel="stylesheet">
   <link href="css/notusedyet/useless.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+</head>
 
 
 <body class="" data-js-loaded="true" style="">
@@ -84,7 +87,7 @@
                             <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
 
                               <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                                  <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Why This Dataset</span></h2>
+                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Why This Dataset</span></h2>
                               </div>
                               <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                                 <h6 class="font_6" style="line-height:1.5em;">
