--- a/data.html
+++ b/data.html
@@ -28,6 +28,8 @@
   <link href="css/notusedyet/useless.css" rel="stylesheet">
 
   <link href="css/d3/table.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
 
 
 <body class="" data-js-loaded="true" style="">
