--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <link href="css/font.css" rel="stylesheet">
   <link href="css/notusedyet/style2.css" rel="stylesheet">
   <link href="css/notusedyet/useless.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+</head>
 
 <body class="" data-js-loaded="true" style="">
 
