--- a/locations.html
+++ b/locations.html
@@ -26,6 +26,8 @@
   <link href="css/font.css" rel="stylesheet">
   <link href="css/notusedyet/style2.css" rel="stylesheet">
   <link href="css/notusedyet/useless.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
 
 
 <body class="" data-js-loaded="true" style="">
@@ -170,7 +172,7 @@
                   </div>
                 </a></li>
               <li data-direction="ltr" data-listposition="right" data-data-id="dataItem-ivhzdnii" class="ddm1repeaterButton" data-state="menu  idle link notMobile" id="comp-ivgjuufw2" data-original-gap-between-text-and-btn="10" aria-hidden="false"
-                style="width: 130px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="prototype.html" target="_self" data-keep-roots="true" data-anchor-comp-id=""
+                style="width: 130px; height: 30px; position: relative; box-sizing: border-box; overflow: visible;"><a data-listposition="right" aria-haspopup="false" href="locations.html" target="_self" data-keep-roots="true" data-anchor-comp-id=""
                   data-anchor="dataItem-ividcu8d" id="comp-ivgjuufw2linkElement" class="ddm1repeaterButtonlinkElement">
                   <div class="ddm1repeaterButton_gapper">
                     <div style="text-align:right" id="comp-ivgjuufw2bg" class="ddm1repeaterButtonbg">
