Added some prototypes changes, some code for second prototype and writeups for first

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                   <div data-packed="true" class="txtNew" id="comp-ivku2gb9" style="width: 852px; pointer-events: none;">
                                     <h2 class="font_2" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Narrative</span></h2>
                                   </div>
-                                  <div data-packed="true" class="txtNew" id="comp-ivku2gb91" style="width: 571px; pointer-events: none;">
+                                  <div data-packed="true" class="txtNew" id="comp-ivku2gb91" style="width: 960px; pointer-events: none;">
                                     <h6 class="font_6" style="line-height:1.5em;">
                                       <span style="font-weight:bold;">
                                         <span style="letter-spacing:0.05em;">
@@ -120,7 +120,9 @@
                                           Visualizations will be divided on two topics. One visualization is focused on locations of movies filmed in San Francisco. Second is focused on movie ratings analysis.
                                         </br>
                                         In general, when you think of locations where the movies masteprieces were filmed, Los Angeles and New York come to mind first.
-
+                                        <!-- The data and map can also make good tourist business. -->
+                                        <!-- This map is absolutely unique -->
+                                        <!-- cinematography history -->
                                         </span>
                                       </span>
                                     </h6>
