--- a/locations.html
+++ b/locations.html
@@ -203,7 +203,7 @@
                         </h6>
                         <div data-packed="true" style="width: 606px; height: 450px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                           </br></br>
-                          <img width=600px src="Interactivity/map.gif" alt="Interactivity_Map">
+                          <img width=600px src="interactivity/map.gif" alt="Interactivity_Map">
                         </div>
                       </br>
                       </div>
