Started doing barchart

--- a/map.html
+++ b/map.html
@@ -39,14 +39,17 @@
       <g id="legend" pointer-events="none"></g>
     </svg>
 
-      <div class="row align-items-center">
+      <!-- <div class="row align-items-center">
         <div class="col-sm-2">
           <p id="value-simple"></p>
         </div>
         <div class="col-sm">
           <div id="slider-simple"></div>
         </div>
-      </div>
+      </div> -->
+
+      <svg width="960" height="500" id="barchart">
+        </svg>
 
     <figcaption>
       <!--  Source: <a href="https://data.sfgov.org/Public-Safety/Police-Department-Incident-Reports-2018-to-Present/wg3w-h783">Police Department Incident Reports: 2018 to Present</a> (<a
